--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = "1.0.5"
+version = "1.0.0"
 group = "net.micmu.mcmods.micwands"
-archivesBaseName = "MobControlWands_1.12.2"
+archivesBaseName = "Re_MobControlWands_1.12.2"
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
